--- a/src/main/resources/templates/reserveer.html
+++ b/src/main/resources/templates/reserveer.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en-US" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments::head(title=#{cultuurhuis})"></head>
+<head th:replace="fragments::head(title=#{reserveer})"></head>
 <body>
 <div class="navbar">
     <nav th:replace="fragments::menu"></nav>
