--- a/src/main/resources/templates/nieuweklant.html
+++ b/src/main/resources/templates/nieuweklant.html
@@ -6,28 +6,38 @@
     <nav th:replace="fragments::menu"></nav>
 </div>
 
-<h1>Nieuwe klant<img th:src="@{/images/nieuweklant.png}" alt="voorstellingen" /> </h1>
+<h1>Nieuwe klant<img src="@{/images/nieuweklant.png}" alt="voorstellingen" /> </h1>
 
-<form sec:authorize="isAnonymous()" th:action="@{/nieuweklant}" method="post" th:object="${klant}">
+<form sec:authorize="isAnonymous()" th:action="@{/nieuweklant/toevoegen}" method="post" th:object="${klant}">
 
     <label>Voornaam <span th:errors="${klant.voornaam}"></span>
         <input th:field="${klant.voornaam}" required autofocus></label>
     <label>Familienaam <span th:errors="*{familienaam}"></span>
         <input th:field="*{familienaam}" required ></label>
+
+
+
     <label>Straat <span th:errors="*{adres.straat}"></span>
         <input th:field="*{adres.straat}" required ></label>
+
     <label>Huisnr. <span th:errors="*{adres.huisnr}"></span>
         <input th:field="*{adres.huisnr}" required ></label>
+
     <label>Postcode <span th:errors="*{adres.postcode}"></span>
         <input th:field="*{adres.postcode}" required ></label>
+
     <label>Gemeente <span th:errors="*{adres.gemeente}"></span>
         <input th:field="*{adres.gemeente}" required ></label>
+
+
+
+
     <label>Gebruikersnaam <span th:errors="*{gebruikersnaam}"></span>
         <input th:field="*{gebruikersnaam}" required ></label>
-    <label>Paswoord <span th:errors="*{geencrypteerdPaswoord}"></span>
-        <input th:field="*{geencrypteerdPaswoord}" required ></label>
+    <label>Paswoord <span th:errors="*{paswoord}"></span>
+        <input th:field="*{paswoord}" required ></label>
 
-    <input type="submit" value="Ok" name="toevoegen">
+    <input type="submit" value="Ok">
 
 </form>
 
