Refactored the voorstellingen repositories and services to get back a List object instead of Page object. Added functionality to only display the shows that are in the future and not the ones in the past.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,7 +30,7 @@
     </tr>
     </thead>
     <tbody>
-        <tr th:each="voorstelling:${voorstellingen.content}" th:object="${voorstelling}">
+        <tr th:each="voorstelling:${voorstellingen}" th:object="${voorstelling}">
             <td th:text="*{datum}"></td>
             <td th:text="*{titel}"></td>
             <td th:text="*{uitvoerders}"></td>
