Changed post method toevoegen(Mandje mandje) from mandje controller to reserveer controller. This allows me to add a post mapping for removing reservations in my "mandje".

--- a/src/main/resources/templates/mandje.html
+++ b/src/main/resources/templates/mandje.html
@@ -16,7 +16,7 @@
         <th>Uitvoerders</a></th>
         <th>Prijs</a></th>
         <th>Plaatsen</a></th>
-        <th>Verwijderen</a></th>
+        <th><input type="submit" value="Verwijderen"></th>
     </tr>
     </thead>
     <tbody>
@@ -26,6 +26,7 @@
         <td th:text="*{uitvoerders}"></td>
         <td th:text="*{prijs}"></td>
         <td th:text="*{aantalPlaatsen}"></td>
+        <td> <input type="checkbox"> </td>
 
     </tr>
     </tbody>
